tests/specs/ts_type_predicate3.txt
# mod.ts
export class C {
  isSomething(): this is Something {}
}

# diagnostics
error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:1:1
  | 
1 | export class C {
  | ^


error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:2:3
  | 
2 |   isSomething(): this is Something {}
  |   ^

# output.txt
Defined in file:///mod.ts:1:1

class C

  isSomething(): this is Something


# output.json
[
  {
    "kind": "class",
    "name": "C",
    "isDefault": false,
    "location": {
      "filename": "file:///mod.ts",
      "line": 1,
      "col": 0,
      "byteIndex": 0
    },
    "declarationKind": "export",
    "classDef": {
      "isAbstract": false,
      "constructors": [],
      "properties": [],
      "indexSignatures": [],
      "methods": [
        {
          "accessibility": null,
          "optional": false,
          "isAbstract": false,
          "isStatic": false,
          "name": "isSomething",
          "kind": "method",
          "functionDef": {
            "params": [],
            "returnType": {
              "repr": "this is Something",
              "kind": "typePredicate",
              "typePredicate": {
                "asserts": false,
                "param": {
                  "type": "this"
                },
                "type": {
                  "repr": "Something",
                  "kind": "typeRef",
                  "typeRef": {
                    "typeParams": null,
                    "typeName": "Something"
                  }
                }
              }
            },
            "hasBody": true,
            "isAsync": false,
            "isGenerator": false,
            "typeParams": []
          },
          "location": {
            "filename": "file:///mod.ts",
            "line": 2,
            "col": 2,
            "byteIndex": 19
          }
        }
      ],
      "extends": null,
      "implements": [],
      "typeParams": [],
      "superTypeParams": []
    }
  }
]
